<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_simple_search">

    <fragment
        android:id="@+id/nav_simple_search"
        android:name="ru.bitrapid.conversationexchangeclient.ui.simplesearch.SimpleSearchFragment"
        android:label="@string/menu_simple_search"
        tools:layout="@layout/fragment_simple_search" />

    <fragment
        android:id="@+id/nav_search_result"
        android:name="ru.bitrapid.conversationexchangeclient.ui.searchresult.SearchResultFragment"
        android:label="@string/menu_simple_search"
        tools:layout="@layout/fragment_search_result" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.bitrapid.conversationexchangeclient.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.bitrapid.conversationexchangeclient.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.bitrapid.conversationexchangeclient.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.bitrapid.conversationexchangeclient.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.bitrapid.conversationexchangeclient.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>