<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/search_parent_layout"
    >

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/searchResultTitleTextColor"
        android:background="@color/searchResultTitleBackgroundColor"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:id="@+id/user_desc_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/user_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User description"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_desc_container"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/search_result_item_gender_age"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_gender_age"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_country_town"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_country_town"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_native_language"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_native_language"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_practicing_language"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_practicing_language"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_type_of_exchange"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_type_of_exchange"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_hobbies_and_interests"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_hobbies_and_interests"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_last_login"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_last_login"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/search_result_item_profile_date"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:text="text"
                android:layout_marginEnd="10dp"
                android:id="@+id/search_result_profile_date"
                />
        </TableRow>
    </TableLayout>


</RelativeLayout>